# fcitx5-anytalk

./: CMakeLists.txt  anytalk-progress.md
anytalk-daemon/: Cargo.toml
anytalk-daemon/src/: main.rs
data/: anytalk-addon.conf  anytalk.conf
src/: addon.cpp  addon.h  ipc_client.cpp  ipc_client.h
