[package]
name = "anytalk-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cpal = "0.15"
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", features = ["ring"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.0", features = ["v4"] }
