[package]
name = "anytalk-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
tokio = { version = "1.0", features = ["full", "signal"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
log = "0.4"
